// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection form should ask when redirecting from form with data (even if submit failed) 1`] = `
<StandardPage
  title="Add a missing collection"
>
  <ConfirmDiscardFormChanges
    dirty={true}
    submitSucceeded={false}
  >
    <form>
      <NavigationDialogBox
        when={true}
      />
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <StandardCard
            help={Object {}}
            title="Add a missing collection"
          >
            <ForwardRef(Grid)
              container={true}
              data-testid="community-selector"
              id="community-selector"
              padding={0}
              spacing={3}
            >
              <ForwardRef(Grid)
                item={true}
                xs={12}
              >
                <Field
                  ariaLabel="Select a community"
                  component={[Function]}
                  genericSelectFieldId="rek-ismemberof"
                  label="Select a community"
                  loadingHint="Loading communities..."
                  name="fez_record_search_key_ismemberof"
                  required={true}
                  selectPrompt="Select a community this collection is a member of"
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </ForwardRef(Grid)>
            </ForwardRef(Grid)>
          </StandardCard>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          sm={true}
          xs={false}
        />
        <ForwardRef(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <ForwardRef(Button)
            color="default"
            data-analyticsid="cancel-collection"
            data-testid="cancel-collection"
            fullWidth={true}
            onClick={[Function]}
            variant="contained"
          >
            Return to the homepage
          </ForwardRef(Button)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <ForwardRef(Button)
            color="primary"
            data-analyticsid="submit-collection"
            data-testid="submit-collection"
            fullWidth={true}
            variant="contained"
          >
            Add collection
          </ForwardRef(Button)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </form>
  </ConfirmDiscardFormChanges>
</StandardPage>
`;

exports[`Collection form should not ask when redirecting from form with data after successful submit 1`] = `
<StandardPage
  title="Add a missing collection"
>
  <ConfirmDiscardFormChanges
    dirty={true}
    submitSucceeded={true}
  >
    <form>
      <NavigationDialogBox
        when={false}
      />
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <StandardCard
            help={Object {}}
            title="Add a missing collection"
          >
            <ForwardRef(Grid)
              container={true}
              data-testid="community-selector"
              id="community-selector"
              padding={0}
              spacing={3}
            >
              <ForwardRef(Grid)
                item={true}
                xs={12}
              >
                <Field
                  ariaLabel="Select a community"
                  component={[Function]}
                  genericSelectFieldId="rek-ismemberof"
                  label="Select a community"
                  loadingHint="Loading communities..."
                  name="fez_record_search_key_ismemberof"
                  required={true}
                  selectPrompt="Select a community this collection is a member of"
                  validate={
                    Array [
                      [Function],
                    ]
                  }
                />
              </ForwardRef(Grid)>
            </ForwardRef(Grid)>
          </StandardCard>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Alert
            allowDismiss={false}
            customIcon={null}
            customType={null}
            disableAlertClick={false}
            dismissTitle="Click to dismiss this alert"
            message="New work has been saved successfully."
            showLoader={false}
            title="Success"
            type="done"
            wiggle={null}
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          sm={true}
          xs={false}
        />
        <ForwardRef(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <ForwardRef(Button)
            color="default"
            data-analyticsid="cancel-collection"
            data-testid="cancel-collection"
            fullWidth={true}
            onClick={[Function]}
            variant="contained"
          >
            Return to the homepage
          </ForwardRef(Button)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          sm="auto"
          xs={12}
        >
          <ForwardRef(Button)
            color="primary"
            data-analyticsid="submit-collection"
            data-testid="submit-collection"
            fullWidth={true}
            variant="contained"
          >
            Add collection
          </ForwardRef(Button)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </form>
  </ConfirmDiscardFormChanges>
</StandardPage>
`;

exports[`Collection form should render form with only the community dropdown 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Add a missing collection
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div />
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-3yz84k-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-add-a-missing-collection"
              id="standard-card-add-a-missing-collection"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-add-a-missing-collection-header"
                    id="standard-card-add-a-missing-collection-header"
                  >
                    Add a missing collection
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-add-a-missing-collection-content"
                data-testid="standard-card-add-a-missing-collection-content"
                id="standard-card-add-a-missing-collection-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-3yz84k-MuiGrid2-root"
                  data-testid="community-selector"
                  id="community-selector"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      disabled="false"
                      is="mock"
                      label="Select a community"
                      name="fez_record_search_key_ismemberof"
                      required="true"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-ckkhel-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-sm-true css-25dekx-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1j7u7t2-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="cancel-collection"
              data-testid="cancel-collection"
              tabindex="0"
              type="button"
            >
              Return to the homepage
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="submit-collection"
              data-testid="submit-collection"
              tabindex="0"
              type="button"
            >
              Add collection
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Collection form should render success panel 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Add a missing collection
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-dkd71f-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-collection-added-successfully"
            id="standard-card-collection-added-successfully"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-collection-added-successfully-header"
                  id="standard-card-collection-added-successfully-header"
                >
                  Collection added successfully
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-collection-added-successfully-content"
              data-testid="standard-card-collection-added-successfully-content"
              id="standard-card-collection-added-successfully-content"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
              >
                Your new collection was created successfully.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-true css-1gtgtdn-MuiGrid2-root"
        />
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Add another collection
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row css-27y2fm-MuiGrid2-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Return to the homepage
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collection form should render the full form 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Add a missing collection
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div />
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-3yz84k-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-add-a-missing-collection"
              id="standard-card-add-a-missing-collection"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-add-a-missing-collection-header"
                    id="standard-card-add-a-missing-collection-header"
                  >
                    Add a missing collection
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-add-a-missing-collection-content"
                data-testid="standard-card-add-a-missing-collection-content"
                id="standard-card-add-a-missing-collection-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-3yz84k-MuiGrid2-root"
                  data-testid="community-selector"
                  id="community-selector"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      disabled="false"
                      is="mock"
                      label="Select a community"
                      name="fez_record_search_key_ismemberof"
                      required="true"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
              data-testid="standard-card-collection-details"
              id="standard-card-collection-details"
            >
              <div
                class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                    data-testid="standard-card-collection-details-header"
                    id="standard-card-collection-details-header"
                  >
                    Collection details
                  </h3>
                </div>
              </div>
              <div
                class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                data-analyticsid="standard-card-collection-details-content"
                data-testid="standard-card-collection-details-content"
                id="standard-card-collection-details-content"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-3yz84k-MuiGrid2-root"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      disabled="false"
                      is="mock"
                      label="Title of collection"
                      name="rek_title"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <field
                      disabled="false"
                      is="mock"
                      label="Collection description"
                      name="rek_description"
                      required="true"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                    >
                      Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                    </p>
                    <field
                      disabled="false"
                      is="mock"
                      name="fez_record_search_key_keywords"
                    />
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                    >
                      Internal Notes (admin)
                    </p>
                    <field
                      disabled="false"
                      is="mock"
                      label="Internal Notes (admin)"
                      name="internalNotes"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-ckkhel-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-sm-true css-25dekx-MuiGrid2-root"
          />
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedDefault MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1j7u7t2-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="cancel-collection"
              data-testid="cancel-collection"
              tabindex="0"
              type="button"
            >
              Return to the homepage
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-1o48fio-MuiGrid2-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
              data-analyticsid="submit-collection"
              data-testid="submit-collection"
              tabindex="0"
              type="button"
            >
              Add collection
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
